Wed Nov 28 17:30:16 CST 2001 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: When parsing stdin, md5sum now displays '-' as the
    filename, to match textutils md5sum.

Wed Nov 28 17:20:28 CST 2001 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Copy dir from backup if the file is empty
    as well.

Sat Nov 17 17:20:52 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * doc/sv/Makefile.in: install dpkg-query and dpkg-deb manpages

Sat Nov 17 17:16:44 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/control: add missing space in dpkg-doc description

Sat Nov 17 15:57:57 CET 2001 peter karlsson <peterk@debian.org>

  * doc/sv/dpkg-query.8, dpkg-deb.1: Initial Swedish translation.
    dpkg.8: Translation fixups.
  * dpkg/dpkg-query.8: Corrected spelling.

Thu Oct 25 16:56:06 JST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/{de,it,pt_BR,sv}.po: Fix translation with inconsistent printf
    format strings

Sun Oct 21 12:58:04 CDT 2001 Adam Heath <doogie@debian.org>

  * optlib/Makefile.in: Run ranlib after creating the library.

Sun Oct 21 12:56:37 CDT 2001 Adam Heath <doogie@debian.org>

  * archtable, scripts/dpkg-architecture.pl: Add darwin.  The source
    doesn't quite work yet on darwin however, as some of the changes are
    being discussed.

Sun Oct 21 03:57:08 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/pl.po: Updated

Wed Oct 17 12:34:19 CDT 2001 Adam Heath <doogie@debian.org>

  * Merge 1.9.17 branch:
    * debian/rules: remove update-rc.d from the package
    * debian/control: update conflict with sysvinit to deal with moved
      update-rc.d

Tue Oct 16 13:09:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/pl.po: Updated

Sun Oct 14 15:04:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/da.po: Updated

Mon Oct  8 19:51:36 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: Turn setstatuspipe into a generic setpipe, in preparation
    for --result-fd.
