@@ -34,6 +34,11 @@ update-alternatives \- maintain symbolic links determining default commands
 .PP
 .B update-alternatives
 .RI [ options ]
+.B --list
+.I name
+.PP
+.B update-alternatives
+.RI [ options ]
 .B --config
 .I name
 .SH DESCRIPTION
@@ -313,6 +318,9 @@ which alternative the symlink currently points to,
 what other alternatives are available
 (and their corresponding slave alternatives),
 and the highest priority alternative currently installed.
+.TP
+\fB--list\fR \fIlink\fR
+Display all targets of the link group.
 .SH FILES
 .TP
 .I /etc/alternatives/
