@@ -57,6 +57,8 @@ dpkg (1.10) unstable; urgency=low
   * Fix format error in Dutch translation. Closes: Bug#113120
   * When parsing stdin, md5sum now displays '-' as the filename, to match
     textutils md5sum.  Closes: #121489.
+  * Apply patch from bug, to give update-alternatives a --list command.
+    Closes: #120924.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
