@@ -1,3 +1,8 @@
+Wed Nov 28 17:40:52 CST 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/update-alternatives.{pl,8}: Apply patch from debian bug 120924,
+    to give update-alternatives a --list command.
+
 Wed Nov 28 17:30:16 CST 2001 Adam Heath <doogie@debian.org>
 
   * utils/md5sum.c: When parsing stdin, md5sum now displays '-' as the
